# C-ipher

./: CMakeLists.txt  ChangeLog  Debug.sh  LICENSE  README.md  Release.sh  main.c
atbash/: main.c  main.cpp
doc/: Crypted.1
include/: affine.h  atbash.h  caesar.h  keyword.h  main.h  railfence.h  scytale.h
src/: affine.cpp  atbash.cpp  caesar.cpp  keyword.cpp  main.cpp  railfence.cpp  scytale.cpp
