cmake_minimum_required(VERSION 2.7)
project(Crypted)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAG} -Wall -Wextra -Werror")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAG_DEBUG} -g -O0")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAG_RELEASE} -Wall -Wextra -Werror")
include_directories(include)
file(GLOB SOURCES "./src/*.cpp")
add_executable(Crypted ${SOURCES})
